parse.py
import sys
from lex import *
from emit import *
from environment import *
from function import *
from upvalue import *

#Stuff to do:
#-------------------------------------------------------------------------------
#start implementing mark_roots
#figure out how to pass local_start and local count.

#Once this is done walk through globals/ locals and mark and set the is_marked to
#true

#i think collect_garbage has to be handled in emit.py, that way I have access to
#the frontend (i.e.the Environment class etc.) perhaps the gc can be called in
#emit_identifier_to_section since most allocation is happening here.

#this way when you emit asm to call collect_garbage, you can actually give it arguments
#one of the args can be the rbp as a pointer. and the  amt of local variables 
# the current function has, that way you can walk the stack's definitions using
#array syntax in c (like I did for arg_list)

#for globals, can perhaps give the ptr to the start of bss section, and the amount
#of globals


#was thinking of marking values if they're created in global scope, 
# but in the case where the global gets redefined, the old value is no longer a root.

#I think what i have to do is just look at the globals 
# and locals in global env and add mark them.

#also, the locals of the current environment have to be added as roots, since if 
#gc is called in the middle of a function,it might need its local definitions.

#this is something I need to think about more when implementing gc: the fact 
#it could be called anywhere at anytime where there's allocation. so it could happen
#in the middle of a function call

#start making functions for deallocating, i.e. deallocate_str,deallocate_function, etc
#-------------------------------------------------------------------------------

#for adding upvalue::::::::::::::
#in body(), turn locals that are nonptrs to val type and then add. (DONE)
# Also change the is_captured flag to true (DONE).

# If adding upvalue thats not local, just pass it as it is as it will correctly be ptr type.
#if same local is being used as an upvalue more than once, remember that it needs
#to be done only once. Also add local to captured_defs

#for getting upvalue::::::::::::::
#in get_upvalue, if upvalue is int,bool,char, return just the tagged type. (DONE)

# in set! though, you dont do this. You pass the ptr type no matter what in set! 
# when you're setting an upvalue  (DONE)

#if the local gets used, have to turn it back to a non ptr type. This will happen
# in EXPRESSION-VARIABLE (DONE)

#then, make set! modify the existing pointer, rather than setting definition to
# a new pointer (DONE)


#Todo5: implement gc
#Todo6: test compiler with different optimization levels, see which one you can
#get away with
#Todo7: Add some macros for casting to improve readability
#Todo8: implement list procedure

#Todo's in the future:
# 1. implement string interning
# 2. implement tail call optimization
# 3. have display print out special characters, i.e. \n,\t etc
# 4. imports
# 5. have a "debug" mode where it prints all the symbols,terminals,nonterminals
    
# Parser object keeps track of current token and checks if the code matches the grammar.
class Parser:
    def __init__(self, lexer,emitter):
        self.lexer = lexer
        self.emitter = emitter
        #store last result of an expression as an identifier class
        self.last_exp_res = None
        self.cur_token = None
        self.peek_token = None
        self.global_environment = Environment()
        self.global_var_count = 0
        self.cur_environment = self.global_environment
        self.tracker = UpvalueTracker()
        self.next_token()
        self.next_token()

    # Return true if the current token matches.
    def check_token(self, type):
        return type == self.cur_token.type
    
    def set_last_exp_res(self,typeof,val):
        self.last_exp_res = Identifier(typeof,val)
    
    def get_last_exp_type(self):
        return self.last_exp_res.typeof
    
    def get_last_exp_value(self):
        if self.last_exp_res is None:
            self.abort("Cannot get last_exp_value since it is set to None.")
        return self.last_exp_res.value
        
    def is_token_any(self,type,type_arr):
        return type in type_arr
    
    # Return true if the next token matches.
    def check_peek(self, type):
        return type == self.peek_token.type

    # Try to match current token. If not, error. Advances the current token.
    def match(self, type):
        if not self.check_token(type):
            self.abort(
            "Expected " + type.name + ", got " + self.cur_token.type.name)
        self.next_token()
        
    # Advances the current token.
    def next_token(self):
        self.cur_token = self.peek_token
        self.peek_token = self.lexer.get_token()

    def abort(self, message):
        sys.exit("Error. " + message)
    
    def evaluate_constant(self):
        match self.cur_token.type:
            case TokenType.NUMBER:
                if isinstance(self.cur_token.text,int):
                    self.set_last_exp_res(IdentifierType.INT,str(self.cur_token.text))
                else: 
                    self.set_last_exp_res(IdentifierType.FLOAT,str(self.cur_token.text))
            case TokenType.BOOLEAN:
                self.set_last_exp_res(IdentifierType.BOOLEAN,self.cur_token.text)
            case TokenType.CHAR:
                self.set_last_exp_res(IdentifierType.CHAR,self.cur_token.text)
            case TokenType.STRING:
                self.set_last_exp_res(IdentifierType.STR,self.cur_token.text)
            case _:
                self.abort(
                "Calling evaluate_constant(). current token is not a constant") 
                                
    def evaluate_symbol(self):
        self.set_last_exp_res(IdentifierType.SYMBOL,self.cur_token.text)
    
    #pair_list is just a list of Identifiers
    def evaluate_pair(self,pair_list):
        self.set_last_exp_res(IdentifierType.PAIR,pair_list)
    
    def evaluate_function(self,function_obj):
        self.set_last_exp_res(IdentifierType.FUNCTION,function_obj)
    
    def evaluate_closure(self,function_ident_obj: Identifier):
        self.set_last_exp_res(IdentifierType.CLOSURE,function_ident_obj)
    
    def evaluate_param(self,arg_name):
        self.set_last_exp_res(IdentifierType.PARAM,arg_name)
        
    def evaluate_function_call(self,func_name):
        self.set_last_exp_res(IdentifierType.FUNCTION_CALL,func_name)
    
    #sets last_exp_res to a vector. Might need to rename other functions above
    #to have set in the name instead of evaluate
    def set_vector(self,vector_obj):
        self.set_last_exp_res(IdentifierType.VECTOR,vector_obj)
    
    #returns bool indicating if the offset of seventh arg is 16 byte aligned 
    # depending on number of args and environment depth given.
    def check_if_alignment_needed(self,env_depth,total_args):
        if total_args < 7:
            return False
        seventh_arg_offset = env_depth - ((total_args - 6) * 8)
        return True if seventh_arg_offset % 16 != 0 else False
    
    
    #checks that definition name doesnt have a name that would conflict with
    # lambdas and lets (i.e. LA1,LA2 etc.)
    def is_definition_name_okay(self,name):
        if len(name) < 3:
            return True
        elif name[0] == "L" and name[1] == "A":
            return not name[2:].isnumeric()
        else:
            return True
    
    #searches for identifier. If identifier is in an enclosing scope, 
    #sends an upvalue request
    def resolve_identifier(self):
        is_global = self.cur_environment.is_global()
        definition_result = self.cur_environment.find_definition(
        self.cur_token.text)
        definition = definition_result[0]
        is_upvalue = definition_result[1]
        nest_count = definition_result[2]
        def_ident_obj = Environment.get_ident_obj(definition)
        offset = Environment.get_offset(definition)
        self.set_last_exp_res(def_ident_obj.typeof,def_ident_obj.value)
        if is_upvalue:
            if self.tracker.is_tracker_on():
                #add to tracker
                env = self.cur_environment
                for i in range(nest_count,0,-1):
                    inner_function_name = env.name
                    env = env.parent
                    #using env.name for for inner, which would fail for 
                    #lets, have to fix when i get to lets
                    is_local = True if i == 1 else False
                    upvalue_request = [inner_function_name,offset,is_local,i]
                    if self.is_definition_name_okay(inner_function_name):
                        self.tracker.add_upvalue_request(env.name,upvalue_request)
                    else:
                        self.tracker.add_anonymous_request(env.name,upvalue_request)
        return definition_result
    
    #to resolve and evaluate identifier. result will be in rax
    def resolve_and_eval_identifier(self):
        is_global = self.cur_environment.is_global()
        definition_result = self.resolve_identifier()
        definition = definition_result[0]
        is_upvalue = definition_result[1]
        nest_count = definition_result[2]
        def_ident_obj = Environment.get_ident_obj(definition)
        offset = Environment.get_offset(definition)
        is_captured = Environment.get_is_captured_flag(definition)
        env_depth = self.cur_environment.depth
        if is_upvalue:
            #assumes that upvalue is always a ptr type. For ints,bools,and chars
            #returns just the tagged type
            self.emitter.emit_get_upvalue(env_depth,offset,nest_count,is_global)
        elif is_global:
            self.emitter.emit_var_to_global(self.cur_token.text,definition)
        else:
            self.emitter.emit_var_to_local(
            self.cur_token.text,offset,def_ident_obj,is_captured,env_depth,is_global)
    
    def add_upvals_to_anon_functions(self,is_global):
        cur_function = self.emitter.cur_function
        #now current function will supply upvalues that inner functions requested,
        #if no requests, wont do anything
        if self.tracker.function_has_anon_requests(cur_function):
            function_requests = self.tracker.get_anonymous_requests(cur_function)
            print("FUNCTION REQUESTS FOR ",cur_function ,"ARE: ", function_requests)
            for request in function_requests:
                inner_function_def = self.cur_environment.symbol_table[request[0]] 
                inner_function_offset = inner_function_def[0]
                is_captured = inner_function_def[2]
                upvalue_offset = request[1]
                is_local = request[2]
                nest_count = request[3]
                if is_local:
                    #first turn non ptr types to ptr types, then do emit_add_upvalue.
                    #have to set is_captured also
                    if not is_captured:
                        #save rax to restore after move_local_to_heap
                        self.emitter.save_rax(self.cur_environment)
                        self.emitter.emit_move_local_to_heap(
                        upvalue_offset,self.cur_environment)
                        self.cur_environment.set_def_as_captured(request[1])
                        env_depth = self.cur_environment.depth
                        #restore rax
                        self.emitter.move_stack_def_to_rax(env_depth,is_global)
                        self.emitter.undo_save_rax(self.cur_environment)
                    self.emitter.emit_add_upvalue_anonymous(
                    self.cur_environment,upvalue_offset,nest_count)
                else:
                    #search upvalues of current definition instead of locals, add
                    #to target closure
                    self.emitter.emit_add_upvalue_nonlocal_anonymous(
                    self.cur_environment,upvalue_offset,nest_count)
            del self.tracker.anonymous_requests[cur_function]

    def program(self):
        print("Program")
        while self.check_token(TokenType.NEWLINE):
            self.next_token()
        #Parse all expressions in the program
        while not self.check_token(TokenType.EOF):
            self.expression()
        # self.emitter.emit_global_definitions(self.global_environment.symbol_table)
        self.emitter.emit_main_section("\tmov rax,0\n\tpop rbp\n\tret")
    
    #after self.expression() is executed, what the expression evaluates to
    #will be in rax   
    def expression(self): 
        if self.check_token(TokenType.NEWLINE):
            self.next_token()
        #<constant> ::= <boolean> | <number> | <character> | <string>
        elif self.check_token(TokenType.NUMBER):
            print("EXPRESSION-NUMBER")
            if isinstance(self.cur_token.text,int):
                self.set_last_exp_res(IdentifierType.INT,str(self.cur_token.text))
                self.emitter.emit_identifier_to_section(self.last_exp_res,
                self.cur_environment,self.global_var_count)
            else:
                self.set_last_exp_res(IdentifierType.FLOAT,str(self.cur_token.text))
                self.emitter.emit_identifier_to_section(self.last_exp_res,
                self.cur_environment,self.global_var_count)
            self.next_token()
        
        elif self.check_token(TokenType.CHAR):
            print("EXPRESSION-CHAR")
            self.set_last_exp_res(IdentifierType.CHAR,self.cur_token.text)
            self.emitter.emit_identifier_to_section(self.last_exp_res,
            self.cur_environment,self.global_var_count)
            self.next_token()
            
        elif self.check_token(TokenType.BOOLEAN):
            print("EXPRESSION-BOOLEAN")
            self.set_last_exp_res(IdentifierType.BOOLEAN,self.cur_token.text)
            self.emitter.emit_identifier_to_section(self.last_exp_res,
            self.cur_environment,self.global_var_count)
            self.next_token()

        elif self.check_token(TokenType.STRING):
            print("EXPRESSION-STRING")
            self.set_last_exp_res(IdentifierType.STR,self.cur_token.text)
            self.emitter.emit_identifier_to_section(self.last_exp_res,
            self.cur_environment,self.global_var_count)
            self.next_token()
        
        elif self.check_token(TokenType.IDENTIFIER):
            print("EXPRESSION-VARIABLE")
            self.resolve_and_eval_identifier()
            self.next_token()
                    
        elif self.check_token(TokenType.QUOTE_SYMBOL):
            print("EXPRESSION-QUOTE-SYMBOL")
            self.next_token()
            self.datum()
        
        elif self.check_token(TokenType.BUILTIN):
            print("BUILTIN")
            is_global = self.cur_environment.is_global()
            builtin_closure = BUILTINS[self.cur_token.text]
            self.emitter.add_extern(self.cur_token.text)
            self.emitter.emit_builtin_closure(self.cur_token.text,is_global)
            self.last_exp_res = builtin_closure
            self.next_token()

        elif self.check_token(TokenType.EXPR_START):
            self.next_token()
            if self.check_token(TokenType.IF):
                self.next_token()
                self.if_exp()
    
            elif self.check_token(TokenType.QUOTE):
                self.next_token()
                self.quote_exp()
            
            elif self.check_token(TokenType.LAMBDA):
                self.next_token()
                self.lambda_exp()
            
            elif self.check_token(TokenType.DEFINE):
                self.next_token()
                self.definition_exp()
                
            elif self.check_token(TokenType.AND):
                self.next_token()
                self.and_exp()
                
            elif self.check_token(TokenType.OR):
                self.next_token()
                self.or_exp()
            
            elif self.check_token(TokenType.COND):
                self.next_token()
                self.cond_exp()
            
            elif self.check_token(TokenType.CASE):
                self.next_token()
                self.case_exp()

            elif self.check_token(TokenType.LET):
                self.next_token()
                self.let_exp()
            
            elif self.check_token(TokenType.LETSTAR):
                self.next_token()
                self.let_star_exp()
            
            elif self.check_token(TokenType.LETREC):
                self.next_token()
                self.letrec_exp()
                
            elif self.check_token(TokenType.SETEXCLAM):
                self.next_token()
                self.setexclam_exp()
            
            elif self.check_token(TokenType.REC):
                self.next_token()
                self.rec_exp()
                
            #(begin <expression>)
            elif self.check_token(TokenType.BEGIN):
                self.next_token()
                print("EXPRESSION-BEGIN")
                self.expression()
                self.match(TokenType.EXPR_END)
                #self.parens.pop()
                
            # (delay <expression>)
            elif self.check_token(TokenType.DELAY):
                self.next_token()
                print("EXPRESSION-DELAY")
                self.expression()
                self.match(TokenType.EXPR_END)
                #self.parens.pop()
            
            elif self.check_token(TokenType.DO):
                self.next_token()
                self.do_exp()
                
            elif self.check_token(TokenType.QUASIQUOTE):
                self.next_token()
                self.quasiquote_exp()
            #<procedure call> ::= (<operator> <operand>*)
            #first exp must be an ident_obj of type function
            else:
                print("EXPRESSION-PROCEDURECALL")
                print("OPERATOR")
                self.expression()
                if self.last_exp_res.typeof == IdentifierType.CLOSURE:
                    print("CLOSURE :DDDDDDDDD")
                    #load the function value ptr in rax.
                    #is_global = self.cur_environment.is_global()
                    #self.emitter.get_function_from_closure(is_global)
                    
                    #if its not a builtin, first add the closure as the arg,
                    #then make rax be the function value ptr
                    self.evaluate_function(self.last_exp_res.value.value)
                    if self.last_exp_res.typeof == IdentifierType.FUNCTION:
                        func_obj = self.last_exp_res.value
                        if func_obj.is_variadic:
                            self.variadic_function_call(func_obj)
                        else:
                            self.function_call(func_obj)
                else:
                    self.general_function_call()
        else:
            self.abort("Token " + self.cur_token.text + " is not a valid expression")

    #for general function calling when the compiler cant tell what function 
    # is being used. The function object is in rax.
    def general_function_call(self):
        print("GENERAL FUNCTION CALL")
        is_global = self.cur_environment.is_global()
        arg_count = 0
        self.emitter.emit_to_section(
        ";general function call start",self.cur_environment.is_global())
        #save rax temporarily to perform checks on it later
        self.emitter.save_rax(self.cur_environment)
        
        #these two are the same value, but the different names are for context
        callable_obj_depth = self.cur_environment.depth
        env_depth = self.cur_environment.depth
    
        arg_count += 1
        self.emitter.emit_to_section(
        ";general_function_call,storing self arg on line below:",is_global)
        self.emitter.push_arg(arg_count,env_depth,is_global)
        self.cur_environment.depth -= 8
        
        #evaluates the args
        while not self.check_token(TokenType.EXPR_END):
            print("OPERAND")
            arg_count += 1
            self.expression()
            self.emitter.emit_pass_by_value(self.cur_environment.depth,is_global)
            self.emitter.push_arg(arg_count,env_depth,is_global)
            self.cur_environment.depth -= 8
        self.cur_environment.depth += 8*arg_count
        
        # now perform runtime checks to see if  operator is a function/ 
        # what kind of function
        self.emitter.emit_function_check(self.cur_environment,callable_obj_depth,arg_count)
        self.emitter.emit_zero_check(is_global)
        variadic_label = self.emitter.emit_conditional_jump("!=",is_global)
        self.emitter.emit_to_section(";aaaaa",is_global)
        
        #dealing with stack alignment for non varidic general function calling
        is_alignment_needed = self.check_if_alignment_needed(env_depth,arg_count)
        print("IS_ALIGNMENT_NEEDED IS: ", is_alignment_needed)
        #now put args in the right place for non variadic case
        #-8 is offset of last arg (assuming env depth is 0)
        for cur_arg in range(arg_count):
            if cur_arg < 6:                
                self.emitter.emit_register_arg(cur_arg,env_depth,is_global)
            else:
                self.emitter.emit_arg_to_stack(
                cur_arg,env_depth,is_global,arg_count,is_alignment_needed)
        self.emitter.emit_to_section("\t;finished putting args non variadic",is_global)
        #advance rsp to point to 7th arg, if less than 7 args, advance rsp so 
        # local defs arent overwritten
        self.emitter.subtract_rsp_given_arity(
        arg_count,env_depth,is_global,is_alignment_needed)
        #now call the function
        self.emitter.emit_function_call(callable_obj_depth,is_global)
        self.emitter.add_rsp_given_arity(
        arg_count,env_depth,is_global,is_alignment_needed)
        #this jmp goes to rest of function
        rest_of_function_label = self.emitter.emit_jump(is_global)
        #variadic branch:
        self.emitter.emit_param_variadic_call(
        variadic_label,callable_obj_depth,env_depth,is_global)
        self.emitter.emit_ctrl_label(is_global,rest_of_function_label)
        self.emitter.undo_save_rax(self.cur_environment)
        self.evaluate_function_call("")
        self.next_token()
        
    #places args in correct registers for function call and emits a function call
    #This is a helper for function_call.
    def place_args_and_call_function(
        self,env_depth,callable_obj_depth,is_global,arg_count,func_obj):
        for cur_arg in range(arg_count):
            if cur_arg < 6:
                self.emitter.emit_register_arg(
                cur_arg,env_depth,is_global,arg_count)
            else:
                seventh_arg_offset =  abs(env_depth - (arg_count - 6)*8)
                self.emitter.subtract_rsp_absolute(seventh_arg_offset,is_global)
                break
        # for calls where no args are on the stack, subtract ONLY the depth if
        # there is stuff to preserve on the stack(AKA if depth != 0)
        if arg_count < 6:
            self.emitter.subtract_rsp(abs(env_depth),is_global)
        self.emitter.emit_function_call(callable_obj_depth,is_global)
        #add back the rsp
        if arg_count > 6:
            self.emitter.add_rsp_absolute(seventh_arg_offset,is_global)
        else:
            self.emitter.add_rsp(abs(env_depth),is_global)
        #self.emitter.undo_save_rax(self.cur_environment)
        #self.evaluate_function(func_obj) 
        # not sure if i need a function call to set last_exp_res ill keep this
        #commented out for now
    
    #given a function object, does a function call. last_exp_res will be set to
    #the function that was called
    def function_call(self,func_obj):
        print("FUNCTION CALL")
        self.emitter.emit_to_section(";function_call",self.cur_environment.is_global())
        self.emitter.save_rax(self.cur_environment)
        arg_count = 0
        is_global = self.cur_environment.is_global()
        env_depth = self.cur_environment.depth
        callable_obj_depth = self.cur_environment.depth
        is_alignment_needed = self.check_if_alignment_needed(env_depth,func_obj.arity)
        if is_alignment_needed:
            self.cur_environment.depth -= 8
            env_depth = self.cur_environment.depth
        #subtract environment's depth temporarily to compute the args without 
        #overwritting the stack,i.e. the local definitions
        self.cur_environment.depth -= func_obj.arity*8
        
        #adding the self arg of the closure:
        arg_count += 1
        self.emitter.push_arg(arg_count,env_depth,is_global,func_obj.arity)
        self.emitter.emit_to_section(";^added self arg",is_global)
        #now edit the saved closure obj (was saved by save_rax) to be the function
        #value_ptr:
        self.emitter.emit_to_section(";editing closure obj to be function obj",is_global)
        self.emitter.get_function_from_closure(callable_obj_depth,is_global)
        self.emitter.emit_to_section(";done editing closure obj",is_global)
        
        while not self.check_token(TokenType.EXPR_END):
            print("OPERAND")
            arg_count += 1
            if arg_count > func_obj.arity:
                break
            self.expression()
            #pass by value
            self.emitter.emit_pass_by_value(self.cur_environment.depth,is_global)
            #push each arg to the stack so that they're stored while evaluating each arg
            self.emitter.push_arg(arg_count,env_depth,is_global,func_obj.arity)
        self.cur_environment.depth += func_obj.arity*8
        if arg_count != func_obj.arity:
                self.abort(f"Arity mismatch. Function " + 
                f"{func_obj.name} requires {str(func_obj.arity - 1)} arguments.")
        self.place_args_and_call_function(
        env_depth,callable_obj_depth,is_global,arg_count,func_obj)
        self.emitter.undo_save_rax(self.cur_environment)
        if is_alignment_needed:
            self.cur_environment.depth += 8
        self.evaluate_function_call(func_obj.name)
        self.next_token()
    
    def variadic_function_call(self,func_obj):
        print("VARIADIC FUNCTION CALL")
        self.emitter.save_rax(self.cur_environment)
        arg_count = 0
        is_global = self.cur_environment.is_global()
        old_env_depth = self.cur_environment.depth
        callable_obj_depth = self.cur_environment.depth
        min_args = func_obj.arity - 1
        #adding self arg of the closure
        arg_count += 1
        self.emitter.push_arg(arg_count,old_env_depth,is_global)
        self.emitter.emit_to_section(";^added self arg",is_global)
        #now edit the saved closure obj (was saved by save_rax) to be the function
        #value_ptr:
        self.emitter.emit_to_section(";editing closure obj to be function obj",is_global)
        self.emitter.get_function_from_closure(callable_obj_depth,is_global)
        self.emitter.emit_to_section(";done editing closure obj",is_global)
        self.cur_environment.depth -= 8
            
        #push args to stack to store while each arg gets evaluated
        while not self.check_token(TokenType.EXPR_END):
            arg_count += 1
            self.expression()
            self.emitter.emit_pass_by_value(self.cur_environment.depth,is_global)
            self.emitter.push_arg(arg_count,old_env_depth,is_global)
            self.cur_environment.depth -= 8
        if arg_count < min_args:
            self.abort(f"Arity mismatch. {func_obj.name} requires at least" + 
            f" {min_args-1} arguments")
        #now make varargs list
        self.emitter.emit_make_arg_list(
        min_args,func_obj.arity,arg_count,old_env_depth,is_global)
        self.cur_environment.depth = old_env_depth
        
        #dealing with stack alignment(stack must be 16 byte aligned at time of call)
        is_alignment_needed = self.check_if_alignment_needed(
        old_env_depth,func_obj.arity)                
        #place args in the right spot
        for cur_arg in range(func_obj.arity):
            if cur_arg < 6:                
                self.emitter.emit_register_arg(cur_arg,old_env_depth,is_global)
            else:
                self.emitter.emit_arg_to_stack(
                cur_arg,old_env_depth,is_global,func_obj.arity,is_alignment_needed)
                
        self.emitter.subtract_rsp_given_arity(
        func_obj.arity,old_env_depth,is_global,is_alignment_needed)
        #now call function
        self.emitter.emit_function_call(callable_obj_depth,is_global)
        #restore rsp/environment depths after function call:
        self.emitter.add_rsp_given_arity(
        func_obj.arity,old_env_depth,is_global,is_alignment_needed)
        self.emitter.undo_save_rax(self.cur_environment)
        self.evaluate_function_call(func_obj.name)
        self.next_token()
        
        
    #(if <test> <consequent> <alternate>) | (if <test> <consequent>), where test,consequent and alternate are expressions
    def if_exp(self):
        is_global = self.cur_environment.is_global()
        is_alternate = False
        print("EXPRESSION-IF")
        print("TEST")
        self.expression()
        self.emitter.emit_false_check(is_global)
        branch1_label = self.emitter.emit_conditional_jump("=",is_global)
        rest_of_exp_label = self.emitter.create_new_ctrl_label()
        print("CONSEQUENT")
        self.expression()
        if not self.check_token(TokenType.EXPR_END):
            print("ALTERNATE")
            #emit a jmp for the true branch so it can jump to the end
            self.emitter.emit_jump(is_global,rest_of_exp_label)
            is_alternate = True
            self.emitter.emit_ctrl_label(is_global,branch1_label)
            self.expression()
        self.emitter.emit_ctrl_label(
        is_global,rest_of_exp_label if is_alternate else branch1_label)
        self.match(TokenType.EXPR_END)
        
    #(quote <datum>)
    def quote_exp(self):
        print("EXPRESSION-QUOTE")
        self.datum()        
        if not self.check_token(TokenType.EXPR_END):
            self.abort("Incorrect syntax in quote expression. ")
        self.next_token()
        
    #(lambda <bound var list> <body>)
    def lambda_exp(self):
        print("EXPRESSION-LAMBDA")
        function = Function()
        is_global = self.cur_environment.is_global()
        if is_global:
            self.tracker.turn_tracker_on()
        print("IN LAMBDA: ", is_global)
        parent_env = self.cur_environment
        previous_function = self.emitter.cur_function
        self.cur_environment = parent_env.create_local_env()
        self.bound_var_list(function)
        self.body(function)
        #now switch back to parent environment/ previous function
        self.emitter.set_current_function(previous_function)
        self.cur_environment = parent_env
        if is_global:
            self.tracker.turn_tracker_off()
        function_ident = Identifier(IdentifierType.FUNCTION,function)
        self.evaluate_closure(function_ident)
        self.emitter.emit_identifier_to_section(
        self.last_exp_res,self.cur_environment,self.global_var_count)
        print("LAMBDA REQUESTS:")
        print(self.tracker.anonymous_requests)
        self.add_upvals_to_anon_functions(is_global)
        self.match(TokenType.EXPR_END)
        
    # (and <expression>*)
    def and_exp(self):
        print("EXPRESION-AND")
        is_global = self.cur_environment.is_global()
        rest_of_program_label = self.emitter.create_new_ctrl_label()
        expression_count = 0
        while not self.check_token(TokenType.EXPR_END):
            expression_count += 1
            self.expression()
            self.emitter.emit_false_check(is_global)
            if not self.check_token(TokenType.EXPR_END):
                self.emitter.emit_conditional_jump(
                "=",is_global,rest_of_program_label)
        self.emitter.emit_ctrl_label(is_global,rest_of_program_label)
        #default case where and was used with no expressions, i.e. (and)
        if expression_count == 0:
            self.emitter.set_rax_true(is_global)
        self.next_token()
        
    # (or <expression>*)
    def or_exp(self):
        print("EXPRESION-OR")
        is_global = self.cur_environment.is_global()
        rest_of_program_label = self.emitter.create_new_ctrl_label()
        expression_count = 0
        while not self.check_token(TokenType.EXPR_END):
            expression_count += 1
            self.expression()
            self.emitter.emit_false_check(is_global)
            if not self.check_token(TokenType.EXPR_END):
                self.emitter.emit_conditional_jump(
                "!=",is_global,rest_of_program_label)
        self.emitter.emit_ctrl_label(is_global,rest_of_program_label)
        if expression_count == 0:
            self.emitter.set_rax_false(is_global)
        self.next_token()
        
    # (cond <cond clause>*) | (cond <cond clause>* (else <sequence>))
    def cond_exp(self):
        print("EXPRESSION-COND")
        end_label = self.emitter.create_new_ctrl_label()
        cur_label = self.emitter.create_new_ctrl_label()
        next_label = self.emitter.create_new_ctrl_label()
        is_global = self.cur_environment.is_global()
        condition_count = 0
        while not self.check_token(TokenType.EXPR_END):
            if self.check_token(TokenType.EXPR_START) and self.check_peek(TokenType.ELSE):
                break
            condition_count += 1
            if condition_count > 1:
                self.emitter.emit_ctrl_label(is_global,cur_label)
            cur_label = next_label
            next_label = self.emitter.create_new_ctrl_label()
            self.cond_clause(cur_label,next_label,end_label,condition_count)
            cur_label = next_label
            next_label = self.emitter.create_new_ctrl_label()
        self.emitter.emit_ctrl_label(is_global,cur_label)
        if self.check_token(TokenType.EXPR_START) and self.check_peek(TokenType.ELSE):
            self.else_rule()
        self.emitter.emit_ctrl_label(is_global,end_label)
        self.next_token()
            
    #(case <expression> <case clause>*) | (case <expression> <case clause>* (else <sequence>))  #<case clause> ::= ((<datum>*) <sequence>)       
    def case_exp(self):
        print("EXPRESSION-CASE")
        self.expression()
        
        if self.check_token(TokenType.EXPR_END):
            #self.parens.pop()
            self.next_token()
            
        elif self.check_token(TokenType.EXPR_START) and self.check_peek(TokenType.ELSE):
            self.else_rule()
            self.match(TokenType.EXPR_END)
            #self.parens.pop()
        
        # one or more case clauses and an optional else at the end
        else:
            while not self.check_token(TokenType.EXPR_END):
                if self.check_token(TokenType.EXPR_START) and self.check_peek(TokenType.ELSE):
                    self.else_rule()
                    break
                self.case_clause()
            self.match(TokenType.EXPR_END)
            #self.parens.pop()
    
    # (let (<binding spec>*) <body>) | (let <variable> (<binding spec>*) <body>) 
    def let_exp(self):
        print("EXPRESSION-LET")
        function = Function()
        does_let_have_name = False
        let_name = None
        let_name_internal = self.emitter.create_lambda_name()
        is_global = self.cur_environment.is_global()
        if is_global:
            self.tracker.turn_tracker_on()
        #setting up new environment for let
        parent_env = self.cur_environment
        parent_env_depth = self.cur_environment.depth
        previous_function = self.emitter.cur_function
        self.cur_environment = parent_env.create_local_env()
        #if user provided name to let function
        if self.check_token(TokenType.IDENTIFIER):
            print("VARIABLE")
            does_let_have_name = True
            let_name = self.cur_token.text
            # self.emitter.emit_definition(ident_name,is_global,offset)
            self.next_token()
        self.match(TokenType.EXPR_START)
        if let_name is None:
